Fix in markdown editor wrapping toolbar buttons

--- a/packages/exmg-markdown-editor/styles/exmg-markdown-codemirror-styles.scss
+++ b/packages/exmg-markdown-editor/styles/exmg-markdown-codemirror-styles.scss
@@ -588,6 +588,7 @@ span.CodeMirror-selectedtext {
 }
 .toolbar .items {
   display: flex;
+  flex-wrap: wrap;
 }
 .toolbar a {
   display: inline-block;
